--- a/components/Email-InputForm/_inputForm.css
+++ b/components/Email-InputForm/_inputForm.css
@@ -1,269 +1,250 @@
-
-.form-root{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: fit-content;
-    align-items: center;
+.form-root {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: fit-content;
+  align-items: center;
 }
 
-    .form-body{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        padding-bottom: 20px;
-    }
-        .form-body h3{
-            text-align: left !important;
-        }
-        .input-form-my-email{
-            width: 100%;
-            display: flex;
-            align-items: baseline;
-            position: relative;
-        }   
-            .input-form-my-email p{
-                font-size: 16px;
-                width: min-content;
-                text-decoration: underline;
-                color: var(--mainColor);
-            }
-            .input-form-my-email div{
-                width: 30px;
-                height: 30px;
-                background-color: var(--mainColor);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 100%;
-                margin-left: auto;
-            }
-            .input-form-my-email div:hover{
-                cursor: pointer;
-                transform: scale(1.015);
-                opacity: .90;
-            }
-            .input-form-my-email div i{
-                font-size: 16px;
-            }
-            .email-input-box{
-                height: 40px;
-                width: 100%;
-                text-align: left;
-                font-size: 16px;
-                padding: 10px 10px;
-                box-sizing: border-box;
-                border-radius: 4px;
-                border: none;
-                font-family: var(--mainFont);
-            }
-    
-            .email-input-box:focus{
-                border: 1px solid var(--mainColor);
-                border-radius: 4px;
-                font-family: var(--mainFont);
-            }
-    
-            .message-input-box{
-                min-height: 100px;
-                width: 100%;
-                font-size: 16px;
-                padding: 10px 10px;
-                box-sizing: border-box;
-                text-align:left;
-                border-radius: 4px;
-                font-family: var(--mainFont);
-                resize: none;
-                border: none;
-            }
-            .message-input-box:focus{
-                border: 1px solid var(--mainColor);
-                border-radius: 4px;
-                font-family: var(--mainFont);
-            }
-           
-       
-    .submit-button-CTA{
-        margin: 10px 0;
-    }
+.form-body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-bottom: 20px;
+}
+.form-body h3 {
+  text-align: left !important;
+}
+.input-form-my-email {
+  width: 100%;
+  display: flex;
+  align-items: baseline;
+  position: relative;
+}
+.input-form-my-email p {
+  font-size: 16px;
+  width: min-content;
+  text-decoration: underline;
+  color: var(--mainColor);
+}
+.input-form-my-email div {
+  width: 30px;
+  height: 30px;
+  background-color: var(--mainColor);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  margin-left: auto;
+}
+.input-form-my-email div:hover {
+  cursor: pointer;
+  transform: scale(1.015);
+  opacity: 0.9;
+}
+.input-form-my-email div i {
+  font-size: 16px;
+}
+.email-input-box {
+  height: 40px;
+  width: 100%;
+  text-align: left;
+  font-size: 16px;
+  padding: 10px 10px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: none;
+  font-family: var(--mainFont);
+}
 
+.email-input-box:focus {
+  border: 1px solid var(--mainColor);
+  border-radius: 4px;
+  font-family: var(--mainFont);
+}
 
-    .email-form-send-pop-up{
-        position: fixed;
-        z-index: 100;
-        transform: translateY(-50%);
-        top: 50%; 
-        height: 100vh;
-        width: 100vw;
-        display: flex;
-        justify-content: center;
-        }
-        .email-pop-up-body{
-            position:relative;
-            height: 150px;
-            width: 250px;
-            background-color: var(--secColor);
-            border-radius: 12px;
-            border: 1px solid var(--mainColor);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 1;
-            transform: translateY(-50%);
-            top: 50%;
-        }
-            .email-pop-up-body h2{
-                text-align: center;
-                font-size: 24px;
-                margin: 10px 0;
-            }
-            .email-pop-up-body span{
-                margin: 10px 0;
-            }
-            .email-pop-up-background{
-                position: fixed;
-                z-index: -1;
-                background-color: var(--secColor);
-                height: 100vh;
-                width: 100vw;
-                opacity: .9;
-            }
+.message-input-box {
+  min-height: 100px;
+  width: 100%;
+  font-size: 16px;
+  padding: 10px 10px;
+  box-sizing: border-box;
+  text-align: left;
+  border-radius: 4px;
+  font-family: var(--mainFont);
+  resize: none;
+  border: none;
+}
+.message-input-box:focus {
+  border: 1px solid var(--mainColor);
+  border-radius: 4px;
+  font-family: var(--mainFont);
+}
 
+.submit-button-CTA {
+  margin: 10px 0;
+}
 
+.email-form-send-pop-up {
+  position: fixed;
+  z-index: 100;
+  transform: translateY(-50%);
+  top: 50%;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+.email-pop-up-body {
+  position: relative;
+  height: 150px;
+  width: 250px;
+  background-color: var(--secColor);
+  border-radius: 12px;
+  border: 1px solid var(--mainColor);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(-50%);
+  top: 50%;
+}
+.email-pop-up-body h2 {
+  text-align: center;
+  font-size: 24px;
+  margin: 10px 0;
+}
+.email-pop-up-body span {
+  margin: 10px 0;
+}
+.email-pop-up-background {
+  position: fixed;
+  z-index: -1;
+  background-color: var(--secColor);
+  height: 100vh;
+  width: 100vw;
+  opacity: 0.9;
+}
 
 /* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
 
-@media (min-width: 601px){
+@media (min-width: 601px) {
+  .form-body {
+    gap: 20px;
+    padding-bottom: 30px;
+  }
+  .input-form-my-email p {
+    font-size: 24px;
+  }
+  .input-form-my-email div {
+    width: 40px;
+    height: 40px;
+  }
+  .input-form-my-email div i {
+    font-size: 24px;
+  }
+  .email-input-box {
+    height: 50px;
+    font-size: 24px;
+    padding: 20px 20px;
+    border-radius: 8px;
+  }
 
-   
-    
-        .form-body{
-            gap: 20px;
-            padding-bottom: 30px;
-        }
-                .input-form-my-email p{
-                    font-size: 24px;
-                }
-                .input-form-my-email div{
-                    width: 40px;
-                    height: 40px;
-                }
-                .input-form-my-email div i{
-                    font-size: 24px;
-                }
-                .email-input-box{
-                    height: 50px;
-                    font-size: 24px;
-                    padding: 20px 20px;
-                    border-radius: 8px;
-                }
-        
-                    .email-input-box:focus{
-                        border: 2px solid var(--mainColor);
-                        border-radius: 8px;
-                    }
-        
-                .message-input-box{
-                    min-height: 200px;
-                    font-size: 24px;
-                    padding: 20px 20px;
-                    border-radius: 8px;
-                }
-                    .message-input-box:focus{
-                        border: 2px solid var(--mainColor);
-                        border-radius: 8px;
-                    }
-               
-           
-        .submit-button-CTA{
-            margin: 20px 0;
-        }
-        
-            .email-pop-up-body{
-                height: 225px;
-                width: 350px;
-                border-radius: 22px;
-                border: 2px solid var(--mainColor);
-            }
-                .email-pop-up-body h2{
-                    text-align: center;
-                    font-size: 32px;
-                    margin: 10px 0;
-                    font-weight: 700;
-                }
-                .email-pop-up-body span{
-                    margin: 10px 0;
-                }
+  .email-input-box:focus {
+    border: 2px solid var(--mainColor);
+    border-radius: 8px;
+  }
 
+  .message-input-box {
+    min-height: 200px;
+    font-size: 24px;
+    padding: 20px 20px;
+    border-radius: 8px;
+  }
+  .message-input-box:focus {
+    border: 2px solid var(--mainColor);
+    border-radius: 8px;
+  }
 
+  .submit-button-CTA {
+    margin: 20px 0;
+  }
+
+  .email-pop-up-body {
+    height: 225px;
+    width: 350px;
+    border-radius: 22px;
+    border: 2px solid var(--mainColor);
+  }
+  .email-pop-up-body h2 {
+    text-align: center;
+    font-size: 32px;
+    margin: 10px 0;
+    font-weight: 700;
+  }
+  .email-pop-up-body span {
+    margin: 10px 0;
+  }
 }
-
 
 /* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
 
+@media (min-width: 1181px) {
+  .form-body {
+    gap: 20px;
+    padding-bottom: 30px;
+  }
+  .input-form-my-email p {
+    font-size: 20px;
+  }
+  .input-form-my-email div {
+    width: 45px;
+    height: 45px;
+  }
+  .input-form-my-email div i {
+    font-size: 20px;
+  }
+  .email-input-box {
+    height: 40px;
+    font-size: 20px;
+    padding: 30px 30px;
+    border-radius: 8px;
+  }
 
-@media (min-width: 1181px){
+  .email-input-box:focus {
+    border: 2px solid var(--mainColor);
+    border-radius: 8px;
+  }
 
+  .form-body .message-input-box {
+    min-height: 200px;
+    font-size: 20px;
+    padding: 30px 30px;
+    border-radius: 8px;
+  }
+  .message-input-box:focus {
+    border: 2px solid var(--mainColor);
+    border-radius: 8px;
+  }
 
-
-    .form-body{
-        gap: 20px;
-        padding-bottom: 30px;
-    }
-        .input-form-my-email p{
-            font-size: 24px;
-        }
-        .input-form-my-email div{
-            width: 45px;
-            height: 45px;
-        }
-            .input-form-my-email div i{
-                font-size: 28px;
-            }
-        .email-input-box{
-            height: 40px;
-            font-size: 24px;
-            padding: 30px 30px;
-            border-radius: 8px;
-        }
-
-            .email-input-box:focus{
-                border: 2px solid var(--mainColor);
-                border-radius: 8px;
-            }
-
-        .form-body .message-input-box{
-            min-height: 200px;  
-            font-size: 24px;
-            padding: 30px 30px;
-            border-radius: 8px;
-        }
-            .message-input-box:focus{
-                border: 2px solid var(--mainColor);
-                border-radius: 8px;
-            }
-
-    .submit-button-CTA{
-        margin: 20px 0;
-    }
-        .email-pop-up-body{
-            position:fixed;
-            height: 200px;
-            width: 300px;
-            border-radius: 22px;
-            border: 2px solid var(--mainColor);
-            gap: 15px;
-        }
-            .email-pop-up-body h2{
-                font-size:34px;
-                margin: 0;
-            }
-            .email-pop-up-body span{
-                margin: 0;
-
-            }
-
-
+  .submit-button-CTA {
+    margin: 20px 0;
+  }
+  .email-pop-up-body {
+    position: fixed;
+    height: 200px;
+    width: 300px;
+    border-radius: 22px;
+    border: 2px solid var(--mainColor);
+    gap: 15px;
+  }
+  .email-pop-up-body h2 {
+    font-size: 34px;
+    margin: 0;
+  }
+  .email-pop-up-body span {
+    margin: 0;
+  }
 }
