--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -22,6 +22,10 @@ b {
   height: 250px;
   object-fit: contain;
   animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+  transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+}
+.contact-content img:hover {
+  transform: rotate(10deg) scale(1.1);
 }
 
 .contact-copy {
