--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -44,7 +44,7 @@
 }
 
 .landingPage-CTA {
-  border: 1px dotted white;
+  /* border: 1px dotted white; */
   margin-left: auto;
   margin-top: 16%;
   animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
