added normalization to index css

--- a/_index.css
+++ b/_index.css
@@ -22,12 +22,13 @@
   padding: 0px;
 }
 
-a {
+:root a {
   color: inherit;
   text-decoration: none;
+  font-size: inherit;
 }
 
-b {
+:root b {
   color: red;
 }
 
