--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -52,55 +52,59 @@
   animation-fill-mode: backwards;
 }
 
-.projects-display-cards {
+.projects-display-projects {
   display: flex;
   flex-direction: column;
   width: 100%;
   margin-bottom: 20%;
 }
 
-.projects-display-cards-CTA {
+.projects-display-card {
+  width: 100%;
+  padding: 20px;
+  gap: 20px;
+  line-height: 20px;
+  height: fit-content;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 40px 0;
-  gap: 10px;
 }
 
-.projects-display-cards-shopping-cart {
-}
-h4 {
-  font-size: 18px;
-  text-align: inherit;
+.projects-display-card h3 {
+  font-size: 20px;
+  text-align: center;
   font-weight: 700;
   width: 100%;
 }
-p {
+
+.projects-display-card p {
   text-align: justify;
   font-size: 16px;
   width: 100%;
 }
 
-video {
-  width: 100%;
-  object-fit: contain;
-}
-
-img {
-  width: 100%;
-  object-fit: contain;
-}
-
-ul {
+.projects-display-card ul {
   text-align: left;
-  width: 90%;
+  width: 100%;
   padding-left: 20px;
 }
-li {
-  text-align: left;
+
+.projects-display-card video {
   width: 100%;
-  padding: 2px 0;
+  object-fit: contain;
+}
+
+.projects-display-card img {
+  width: 100%;
+  object-fit: contain;
+}
+
+.projects-display-cards-CTA {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px 0;
+  gap: 10px;
 }
 
 /* -------------------- Projects card styles for img FullScreen open ---------------*/
