--- a/components/DemoCard/_demoCard.css
+++ b/components/DemoCard/_demoCard.css
@@ -12,56 +12,6 @@
   margin: 5px 0px;
 }
 
-.card-title {
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--mainColor);
-  padding: 0px 20px;
-  box-sizing: border-box;
-}
-
-.card-title h3 {
-  font-size: 20px;
-  text-align: left;
-  font-weight: 700;
-  width: 100%;
-}
-
-.card-title .fa-chevron-right {
-  font-size: 20px;
-}
-
-.card-root-open .card-title span {
-  height: 30px;
-  width: 30px;
-  border-radius: 100%;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  background-color: var(--textMainColor);
-  color: var(--mainColor);
-  transform: rotate(90deg);
-  transition: all 0.3s ease-in-out;
-}
-
-/* -------------------- Card open --------------------*/
-
-.card-root-open .card-body {
-  width: 100%;
-  background-color: var(--secColor);
-  max-height: 300px;
-  transition: all 0.3s ease-in-out;
-  opacity: 1;
-  overflow: hidden scroll;
-}
-
-/*  ------------------------- CLOSED  --------------------- */
-
 .card-root-close {
   width: 100%;
   height: fit-content;
@@ -77,7 +27,44 @@
   background-color: none;
 }
 
-.card-root-close .card-title span {
+.card-headline {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--mainColor);
+  padding: 0px 20px;
+  box-sizing: border-box;
+}
+
+.card-headline-title {
+  font-size: 20px;
+  text-align: left;
+  font-weight: 700;
+  width: 100%;
+}
+
+.fa-chevron-right {
+  font-size: 16px;
+}
+
+.card-root-chevron-open {
+  height: 30px;
+  width: 30px;
+  border-radius: 100%;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  background-color: var(--textMainColor);
+  color: var(--mainColor);
+  transform: rotate(90deg);
+  transition: all 0.3s ease-in-out;
+}
+
+.card-root-chevron-close {
   height: 30px;
   width: 30px;
   border-radius: 100%;
@@ -91,26 +78,23 @@
   transform: rotate(0deg);
   transition: all 0.3s ease-in-out;
 }
+
 .card-root-close .card-body {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
   max-height: 0px;
-  background-color: var(--secColor);
-  padding: 0px 20px;
-  transition: all 0.4s ease;
-  gap: 20px;
   opacity: 0;
-  box-sizing: border-box;
+  background-color: var(--secColor);
+  transition: all 0.3s ease-in-out;
+  overflow: hidden scroll;
 }
 
-.card-root-close .card-body h4 {
-  font-size: 18px;
-  text-align: inherit;
-  font-weight: 700;
+.card-root-open .card-body {
   width: 100%;
+  max-height: 300px;
+  opacity: 1;
+  background-color: var(--secColor);
+  transition: all 0.3s ease-in-out;
+  overflow: hidden scroll;
 }
 
 /* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
@@ -121,20 +105,20 @@
     border-radius: 22px;
     margin: 15px 0px;
   }
-  .card-title {
+  .card-headline {
     height: 65px;
     display: flex;
     padding: 0px 20px;
   }
-  .card-title h3 {
+  .card-headline-title {
     font-size: 28px;
   }
-  .card-title .fa-chevron-right {
+  .card-headline .fa-chevron-right {
     font-size: 28px;
   }
   /* -------------------- Card open --------------------*/
 
-  .card-root-open .card-title span {
+  .card-root-open .card-headline span {
     height: 40px;
     width: 40px;
   }
@@ -166,7 +150,7 @@
     margin: 10px 0px;
   }
 
-  .card-root-close .card-title span {
+  .card-root-close .card-headline span {
     height: 40px;
     width: 40px;
   }
@@ -187,20 +171,20 @@
     border-radius: 22px;
     margin: 10px 0px;
   }
-  .card-title {
+  .card-headline {
     height: 70px;
     padding: 0px 30px;
   }
-  .card-title h3 {
+  .card-headline-title {
     font-size: 28px;
   }
-  .card-title .fa-chevron-right {
+  .card-headline .fa-chevron-right {
     font-size: 28px;
   }
 
   /* -------------------- Card open --------------------*/
 
-  .card-root-open .card-title span {
+  .card-root-open .card-headline span {
     height: 45px;
     width: 45px;
   }
@@ -244,7 +228,7 @@
     margin: 10px 0px;
   }
 
-  .card-root-close .card-title span {
+  .card-root-close .card-headline span {
     height: 45px;
     width: 45px;
   }
