--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -27,8 +27,8 @@
 .projects-copy {
   width: 100%;
   padding-top: 20%;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 }
 
 .projects-copy h2 {
