--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -26,9 +26,10 @@
 
 .projects-copy {
   width: 100%;
+  height: fit-content;
   padding-top: 20%;
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
 .projects-copy h2 {
