--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -26,6 +26,7 @@
 .landingPage-copy {
   width: 100%;
   padding-top: 20%;
+  gap: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -46,7 +47,7 @@
 
 .landingPage-CTA {
   margin-left: auto;
-  margin-top: 16%;
+  margin-top: 10%;
   animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   animation-delay: 1s;
   animation-fill-mode: backwards;
