--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -55,17 +55,34 @@
 .contact-options-cards {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
   width: 100%;
-  margin-bottom: 40%;
+  margin-bottom: 20%;
 }
-.contact-options-cards h3 {
+
+.contact-display-card {
+  width: 100%;
+  padding: 20px;
+  gap: 20px;
+  line-height: 20px;
+  height: fit-content;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-display-card h3 {
   font-size: 20px;
+  text-align: center;
+  font-weight: 700;
+  width: 100%;
 }
-.contact-options-cards span {
+
+.contact-display-card-CTA {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 10px 0;
+  gap: 10px;
 }
 
 /* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
