projects display card asset fixed for full screen

--- a/components/NavBar/_NavBar.css
+++ b/components/NavBar/_NavBar.css
@@ -1,212 +1,190 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-.mobileNavBar{
-    height: 60px;
-    background-color: var(--mainColor);
-    width: 100%;
-    position:fixed ;
-    bottom:0 ;
-    box-shadow: 0px 0px 10px 10px hsla(0, 0%, 20%, .3);
-    z-index: 100;
-    border-top: 1px solid var(--textSecColor);
+.mobileNavBar {
+  height: 60px;
+  background-color: var(--mainColor);
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  box-shadow: 0px 0px 10px 10px hsla(0, 0%, 20%, 0.3);
+  z-index: 100;
+  border-top: 1px solid var(--textSecColor);
 }
 
 .mobileNavBar .mobileOptions {
+  display: flex;
+  position: relative;
+  justify-content: space-around;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.isActive {
+  color: var(--textMainColor);
+  border: none;
+  background: none;
+  font-size: 20px;
+}
+
+.isIdle {
+  color: var(--textSecColor);
+  border: none;
+  background: none;
+  font-size: 20px;
+}
+
+/* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
+
+@media (min-width: 601px) {
+  .tabletNavBar {
+    height: 80px;
+    background-color: var(--mainColor);
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    box-shadow: 0px 0px 10px 10px hsla(0, 0%, 20%, 0.3);
+    z-index: 100;
+    border-top: 1px solid var(--textSecColor);
+  }
+
+  .tabletNavBar .tabletOptions {
     display: flex;
     position: relative;
     justify-content: space-around;
     top: 50%;
     transform: translateY(-50%);
-}
+  }
 
-.isActive{
+  .isActive {
     color: var(--textMainColor);
     border: none;
     background: none;
-    font-size: 20px;
-}
+    font-size: 30px;
+  }
 
-.isIdle{
+  .isIdle {
     color: var(--textSecColor);
     border: none;
     background: none;
-    font-size: 20px;
+    font-size: 30px;
+  }
 }
-
-
-
-/* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
-
-
-
-
-@media (min-width: 601px){
-
-
-    .tabletNavBar{
-        height: 80px;
-        background-color: var(--mainColor);
-        width: 100%;
-        position:fixed ;
-        bottom:0 ;
-        box-shadow: 0px 0px 10px 10px hsla(0, 0%, 20%, .3);
-        z-index: 100;
-        border-top: 1px solid var(--textSecColor);
-    }
-
-    .tabletNavBar .tabletOptions {
-        display: flex;
-        position: relative;
-        justify-content: space-around;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-    .isActive{
-        color: var(--textMainColor);
-        border: none;
-        background: none;
-        font-size: 30px;
-    }
-
-    .isIdle{
-        color: var(--textSecColor);
-        border: none;
-        background: none;
-        font-size: 30px;
-    }
-
-}
-
 
 /* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
 
+@media (min-width: 1181px) {
+  button:hover {
+    cursor: pointer;
+    transform: scale(1.015);
+    opacity: 0.9;
+  }
 
-@media (min-width: 1181px){
+  i:hover {
+    cursor: pointer;
+    transform: scale(1.015);
+    opacity: 0.9;
+  }
 
-    button:hover{
-        cursor: pointer;
-        transform: scale(1.015);
-        opacity: .9;
-    }
+  .desktopNavBar {
+    height: 80px;
+    background-color: var(--mainColor);
+    width: 100%;
+    position: fixed;
+    top: 0;
+    box-shadow: 0px 0px 10px 10px hsla(0, 0%, 20%, 0.3);
+    z-index: 100;
+    border-bottom: 1px solid var(--textSecColor);
+  }
 
-    i:hover{
-        cursor: pointer;
-        transform: scale(1.015);
-        opacity: .9;
-    }
+  .desktopOptions {
+    display: flex;
+    position: relative;
+    align-items: center;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .desktopOptions-logo-img {
+    margin-right: auto;
+    margin-left: 80px;
+  }
+  .desktopOptions img {
+    height: 60px;
+    width: fit-content;
+    object-fit: contain;
+  }
 
-        .desktopNavBar{
-            height: 80px;
-            background-color: var(--mainColor);
-            width: 100%;
-            position:fixed;
-            top:0;
-            box-shadow: 0px 0px 10px 10px hsla(0, 0%, 20%, .3);
-            z-index: 100;
-            border-bottom: 1px solid var(--textSecColor);
-        }
-        
-        .desktopOptions {
-            display: flex;
-            position: relative;
-            align-items: center;
-            top: 50%;
-            transform: translateY(-50%);
+  .desktopOptions img:hover {
+    cursor: pointer;
+  }
 
-        }
-        .desktopOptions-logo-img{
-            margin-right: auto;
-            margin-left: 80px;
-        }
-        .desktopOptions img{
-            height: 60px;
-            width: fit-content;
-            object-fit: contain;
-        }   
+  .desktop-nav-CTA-buttons {
+    width: auto;
+    margin-left: auto;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
 
-        .desktopOptions img:hover{
-            cursor: pointer;
-        }
+  .isActive {
+    font-size: 36px;
+    margin: 0px 30px;
+  }
 
-        .desktop-nav-CTA-buttons{
-            width: auto;
-            margin-left: auto;
-            display: flex;
-            gap: 10px;
-            align-items: center;
-        }
+  /* ------------------ Desktop Side Bar ------------------*/
 
-        .isActive{
-            font-size: 36px;
-            margin: 0px 30px;
-        }
-        
+  .sideBar-open {
+    height: 100vh;
+    width: 300px;
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(0%);
+    position: fixed;
+    right: 0px;
+    top: -10px;
+  }
 
-        /* ------------------ Desktop Side Bar ------------------*/
+  .sideBar-close {
+    height: 100vh;
+    width: 300px;
+    transition: all 0.3s ease-in-out;
+    transform: translateX(110%);
+    position: fixed;
+    right: 0px;
+    top: -10px;
+  }
 
+  .dekstop-nav-sideBar {
+    height: 100%;
+    width: 100%;
+    background-color: var(--secColor);
+    display: flex;
+    flex-direction: column;
+    border-left: 2px solid var(--textSecColor);
+    position: relative;
+    box-shadow: 0px 0px 10px 10px hsla(0, 0%, 20%, 0.3);
+  }
+  .dekstop-nav-sideBar i {
+    font-size: 36px;
+    margin: 20px;
+    width: fit-content;
+    height: fit-content;
+  }
 
-        .sideBar-open{
-            height: 100vh;
-            width: 300px;
-            transition: transform .3s ease-in-out;
-            transform: translateX(0%);
-            position: fixed;
-            right:0px;
-            top: -10px;
+  .sideBar-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 100%;
+    height: 100%;
+    margin: 20px 20px 0px -20px;
+  }
+  .sideBar-body span i {
+    font-size: 20px;
+    padding-left: 10px;
+    margin: 0px;
+  }
 
-        }
-
-        .sideBar-close{
-            height: 100vh;
-            width: 300px;
-            transition: all .3s ease-in-out;
-            transform: translateX(110%);
-            position: fixed;
-            right:0px;
-            top: -10px;            
-        }
-
-        .dekstop-nav-sideBar{
-            height: 100%;
-            width: 100%;
-            background-color: var(--secColor);
-            display: flex;
-            flex-direction: column;
-            border-left: 2px solid var(--textSecColor);
-            position: relative;
-            box-shadow: 0px 0px 10px 10px hsla(0, 0%, 20%, .3);
-        }
-        .dekstop-nav-sideBar i{
-            font-size: 36px;
-            margin: 20px;
-            width: fit-content;
-            height: fit-content;
-        }
-
-        .sideBar-body{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            width: 100%;
-            height: 100%;
-            margin: 20px 20px 0px -20px;
-        }
-        .sideBar-body span i{
-            font-size: 20px;
-            padding-left: 10px;
-            margin: 0px;
-        }
-
-        .sideBar-body i{
-            margin-top: auto;
-            font-size: 20px;
-            width: fit-content;
-            height: fit-content;
-        }
-
-      
+  .sideBar-body i {
+    margin-top: auto;
+    font-size: 20px;
+    width: fit-content;
+    height: fit-content;
+  }
 }
