--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -8,12 +8,13 @@
   height: 100%;
   width: 100%;
   margin-top: 20%;
+  margin-bottom: 20%;
   display: flex;
   flex-direction: column;
 }
 
 .landingPage-content img {
-  width: 100%;
+  height: 250px;
   object-fit: contain;
   animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
   transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
