--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -14,7 +14,7 @@
 }
 
 .projects-content img {
-  width: 100%;
+  height: 250px;
   object-fit: contain;
   animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
   transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
